--- a/FiloArtsPlus/templates/blogs.html
+++ b/FiloArtsPlus/templates/blogs.html
@@ -40,14 +40,14 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="/" class="active">Home</a></li>
-          <li><a href="{% url 'homepage' %}#about">About</a></li>
-          <li><a href="{% url 'homepage' %}#filokid">FiloKid</a></li>
-          <li><a href="{% url 'homepage' %}#filocraft">FiloCraft</a></li>
-          <li><a href="{% url 'homepage' %}#filosolve">FiloSolve</a></li>
-          <li><a href="{% url 'gallery' %}">Gallery</a></li>
-          <li><a href="{% url 'blogs' %}">Blogs</a></li>
-          <li><a href="{% url 'homepage' %}#contact">Contact Us</a></li>
+          <li><a style="text-transform: none !important;" href="/" >Home</a></li>
+          <li><a style="text-transform: none !important;" href="{% url 'homepage' %}#about">About</a></li>
+          <li><a style="text-transform: none !important;" href="{% url 'homepage' %}#filokid">FiloKid</a></li>
+          <li><a style="text-transform: none !important;" href="{% url 'homepage' %}#filocraft">FiloCraft</a></li>
+          <li><a style="text-transform: none !important;" href="{% url 'homepage' %}#filosolve">FiloSolve</a></li>
+          <li><a style="text-transform: none !important;" href="{% url 'gallery' %}">Gallery</a></li>
+          <li><a class="active" style="text-transform: none !important;" href="{% url 'blogs' %}">Blogs</a></li>
+          <li><a style="text-transform: none !important;" href="{% url 'homepage' %}#contact">Contact Us</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
