--- a/FiloArtsPlus/templates/index.html
+++ b/FiloArtsPlus/templates/index.html
@@ -44,14 +44,14 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="/" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#kidloom">FiloKid</a></li>
-          <li><a href="#filocraft">FiloCraft</a></li>
-          <li><a href="#filosolve">FiloSolve</a></li>
-          <li><a href="{% url 'gallery' %}">Gallery</a></li>
-          <li><a href="{% url 'blogs' %}">Blogs</a></li>
-          <li><a href="#contact">Contact Us</a></li>
+          <li><a style="text-transform: none !important;" href="/" class="active">Home</a></li>
+          <li><a style="text-transform: none !important;" href="#about">About</a></li>
+          <li><a style="text-transform: none !important;" href="#filokid">FiloKid</a></li>
+          <li><a style="text-transform: none !important;" href="#filocraft">FiloCraft</a></li>
+          <li><a style="text-transform: none !important;" href="#filosolve">FiloSolve</a></li>
+          <li><a style="text-transform: none !important;" href="{% url 'gallery' %}">Gallery</a></li>
+          <li><a style="text-transform: none !important;" href="{% url 'blogs' %}">Blogs</a></li>
+          <li><a style="text-transform: none !important;" href="#contact">Contact Us</a></li>
 
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -226,12 +226,12 @@
                      <h3>FiloCraft</h3>
                   <h4><i>Crafting Art that lasts a lifetime.</i></h4>
                  <p> <h4>In FiloCraft, we produce high-quality, diverse and sustainable art. Our creations span drawings and Paintings,
-                  scriptures and crafts showcasing excellence and creativity.
+                  Sculptures and crafts showcasing excellence and creativity.
                   Explore our art:
 
                    <ul>
                   <li><i class="bi bi-check2-all"></i> <span>Paintings.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Scriptures.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Sculptures.</span></li>
                   <li><i class="bi bi-check2-all"></i> <span>Custom Craft.</span></li>
                 </ul>
 
@@ -256,54 +256,6 @@
 
 
       <br><br><br>
-
-
-{#      FiloCraft Section#}
-{#      <hr>#}
-{##}
-{#    <section id="filocraft"  class=" light-background" >#}
-{##}
-{#       <div  class="info d-flex align-items-center">#}
-{#        <div class="container">#}
-{#          <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">#}
-{#<div class="container section-title" data-aos="fade-up">#}
-{#<h2>FiloCraft</h2>#}
-{#        Crafting Art that lasts a lifetime.#}
-{##}
-{##}
-{##}
-{#      </div><!-- End Section Title -->#}
-{#            </div>#}
-{##}
-{##}
-{#                   <p> <h4>In FiloCraft, we produce high-quality, diverse and sustainable art. Our creations span drawings and Paintings,#}
-{#                  scriptures and crafts showcasing excellence and creativity. <br>#}
-{#                  Explore our art:#}
-{##}
-{##}
-{#                  <ul>#}
-{#                     <li>Paintings</li>#}
-{#                      <li>Scriptures</li>#}
-{#                      <li>Custom Crafts</li>#}
-{#                  </ul>#}
-{##}
-{#                  </h4>#}
-{##}
-{#                  </div>#}
-{#                <br>#}
-{#              <div class="col-lg-13 text-center">#}
-{#              <a href="/filocraft" class="btn-get-started align-items-center">Learn more <i class="bi bi-arrow-right"></i></a>#}
-{#            </div>#}
-{#          </div>#}
-{##}
-{#        </section>#}
-{#            <hr>#}
-{#      <br>#}
-
-
-
-{#      TaskHive Section#}
-
 
 
       <!-- Page Title -->
