--- a/staticfiles/admin/css/login.css
+++ b/staticfiles/admin/css/login.css
@@ -5,6 +5,11 @@
     height: auto;
 }
 
+.login-box .login-logo {
+    display: none !important;
+
+}
+
 .login #header {
     height: auto;
     padding: 15px 16px;
