--- a/staticfiles/admin/css/nav_sidebar.css
+++ b/staticfiles/admin/css/nav_sidebar.css
@@ -2,6 +2,8 @@
     position: sticky;
     top: 0;
     max-height: 100vh;
+    background-color: #FEB900FF;
+
 }
 
 .toggle-nav-sidebar {
@@ -14,7 +16,7 @@
     width: 23px;
     border: 0;
     border-right: 1px solid var(--hairline-color);
-    background-color: var(--body-bg);
+    background-color: #FEB900FF;
     cursor: pointer;
     font-size: 1.25rem;
     color: var(--link-fg);
@@ -28,7 +30,7 @@
 
 .toggle-nav-sidebar:hover,
 .toggle-nav-sidebar:focus {
-    background-color: var(--darkened-bg);
+    background-color: #FEB900FF;
 }
 
 #nav-sidebar {
@@ -38,7 +40,7 @@
     margin-left: -276px;
     border-top: 1px solid transparent;
     border-right: 1px solid var(--hairline-color);
-    background-color: var(--body-bg);
+    background-color: #FEB900FF;
     overflow: auto;
 }
 
