--- a/FiloArtsPlus/templates/blog_detail.html
+++ b/FiloArtsPlus/templates/blog_detail.html
@@ -96,7 +96,7 @@
     <br><br>
     <div class="container">
        <h3 class="mt-4">
-    <button id="toggle-comments" class="btn btn-sm btn-primary">
+    <button style="background-color:#FEB900FF" id="toggle-comments" class="btn btn-sm">
         Comments ({{ comments|length }})
     </button>
 </h3>
@@ -126,7 +126,7 @@
                     {{ form.text }}
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button style="background-color:#FEB900FF" type="submit" class="btn ">Submit</button>
         </form>
     </div>
 </div>
