--- a/FiloArtsPlus/templates/gallery.html
+++ b/FiloArtsPlus/templates/gallery.html
@@ -235,9 +235,9 @@
             <p><strong>Email:</strong> <span>contact@filoartsplus.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
+            <a href="https://www.instagram.com/filionsage?utm_source=qr&igsh=MWxrdXozdWhtN3Zzcg=="><i class="bi bi-instagram"></i></a>
+            <a href="https://wa.me/254713259411"><i class="bi bi-whatsapp"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
             <a href=""><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
