--- a/FiloArtsPlus/templates/gallery.html
+++ b/FiloArtsPlus/templates/gallery.html
@@ -237,7 +237,7 @@
           <div class="social-links d-flex mt-4">
             <a href="https://www.instagram.com/filionsage?utm_source=qr&igsh=MWxrdXozdWhtN3Zzcg=="><i class="bi bi-instagram"></i></a>
             <a href="https://wa.me/254713259411"><i class="bi bi-whatsapp"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
+            <a href="https://www.facebook.com/share/1JzusR9hhF/"><i class="bi bi-facebook"></i></a>
             <a href=""><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
